# postgres-api-client.js
@@ -17,7 +17,9 @@
     'leave-requests.submit',
     'leave-requests.cancel',
     'time-off-requests.approve',
-    'time-off-requests.reject'
+    'time-off-requests.reject',
+    'notifications.mark-read',
+    'notifications.mark-all-read'
   ]);
 
   class PostgresApiError extends Error {
@@ -209,6 +211,7 @@
       bootstrap: () => request('/bootstrap', { bootstrapRevision: true }),
       bootstrapRevision: () => request('/bootstrap/revision', { bootstrapRevision: true }),
       listTimeOffRequests: () => request('/time-off-requests'),
+      listNotifications: () => request('/notifications'),
       executeCommand(commandName, input, { idempotencyKey = cryptoImpl.randomUUID() } = {}) {
         if (!COMMAND_NAMES.includes(commandName)) {
           throw new PostgresApiError('Command 不在允許清單。', { code: 'COMMAND_NOT_FOUND', status: 404 });
